[project]
name = "whalekv"
version = "0.1.0"
description = "WhaleKV: Semantic graph-based KV cache compression for long-context LLMs"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.3.1",
    "transformers>=5.0.0",
    "numpy>=2.0.0",
    "accelerate>=1.0.0",
]

[project.optional-dependencies]
eval = [
    "rouge>=1.0.1",
    "nltk>=3.9.1",
    "tqdm>=4.66.4",
    "datasets>=2.21.0",
    "pandas>=2.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target_version = ["py310"]
